--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
-  <link rel="stylesheet" href="../css/index.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./css/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -17,11 +17,11 @@
 <body>
   <header>
     <div class="primerDivHeader">
-      <img src="../images/icon-menu.svg" alt="icono del menu" class="menuMobile">
-      <img src="../images/logo.svg" alt="imagen del logo" class="logo">
+      <img src="./images/icon-menu.svg" alt="icono del menu" class="menuMobile">
+      <img src="./images/logo.svg" alt="imagen del logo" class="logo">
     </div>
     <nav class="nav">
-      <img src="../images/icon-close.svg" alt="imagen para cerrar el menu mobile" class="cerrarMenu">
+      <img src="./images/icon-close.svg" alt="imagen para cerrar el menu mobile" class="cerrarMenu">
       <ul class="ul">
         <li class="li"><a href="#" class="enlaceMenuMobile">Collections</a></li>
         <li class="li"><a href="#" class="enlaceMenuMobile">Men</a></li>
@@ -32,8 +32,8 @@
     </nav>
     <div class="segundoDivHeader">
       <span class="elementosDelCarrito"></span>
-      <img src="../images/icon-cart.svg" alt="icono del carrito de compras" class="carritoDeCompras2">
-      <img src="../images/image-avatar.png" alt="icono del avatar de la persona" class="avatar">
+      <img src="./images/icon-cart.svg" alt="icono del carrito de compras" class="carritoDeCompras2">
+      <img src="./images/image-avatar.png" alt="icono del avatar de la persona" class="avatar">
       <div class="divCarrito top">
         <div class="primerDivCarrito">
           <p class="cart">Cart</p>
@@ -47,25 +47,25 @@
   <main>
     <section class="primerSection">
       <div class="divFlechas">
-        <img src="../images/icon-previous.svg" alt="flecha anterior" class="flechas atras">
-        <img src="../images/icon-next.svg" alt="flecha siguiente" class="flechas siguiente">
+        <img src="./images/icon-previous.svg" alt="flecha anterior" class="flechas atras">
+        <img src="./images/icon-next.svg" alt="flecha siguiente" class="flechas siguiente">
       </div>
-        <img src="../images/image-product-1.jpg" alt="imagen de una zapatilla" class="imagenesMobile activada" ></a>
-        <img src="../images/image-product-2.jpg" alt="imagen de una zapatilla" class="imagenesMobile" ></a>
-        <img src="../images/image-product-3.jpg" alt="imagen de una zapatilla" class="imagenesMobile" ></a>
-        <img src="../images/image-product-4.jpg" alt="imagen de una zapatilla" class="imagenesMobile" ></a>
+        <img src="./images/image-product-1.jpg" alt="imagen de una zapatilla" class="imagenesMobile activada" ></a>
+        <img src="./images/image-product-2.jpg" alt="imagen de una zapatilla" class="imagenesMobile" ></a>
+        <img src="./images/image-product-3.jpg" alt="imagen de una zapatilla" class="imagenesMobile" ></a>
+        <img src="./images/image-product-4.jpg" alt="imagen de una zapatilla" class="imagenesMobile" ></a>
         <div class="divImagenes">
-          <a data-fslightbox="first-lightbox" href="../images/image-product-1.jpg">
-            <img src="../images/image-product-1-thumbnail.jpg" alt="imagen de una zapatilla" class="imagenCaja">
+          <a data-fslightbox="first-lightbox" href="./images/image-product-1.jpg">
+            <img src="./images/image-product-1-thumbnail.jpg" alt="imagen de una zapatilla" class="imagenCaja">
           </a>
-          <a data-fslightbox="second-lightbox" href="../images/image-product-2.jpg">
-            <img src="../images/image-product-2-thumbnail.jpg" alt="imagen de una zapatilla" class="imagenCaja">
+          <a data-fslightbox="second-lightbox" href="./images/image-product-2.jpg">
+            <img src="./images/image-product-2-thumbnail.jpg" alt="imagen de una zapatilla" class="imagenCaja">
           </a>
-          <a data-fslightbox="third-lightbox" href="../images/image-product-3.jpg">
-            <img src="../images/image-product-3-thumbnail.jpg" alt="imagen de una zapatilla" class="imagenCaja">
+          <a data-fslightbox="third-lightbox" href="./images/image-product-3.jpg">
+            <img src="./images/image-product-3-thumbnail.jpg" alt="imagen de una zapatilla" class="imagenCaja">
           </a>
-          <a data-fslightbox="fourth-lightbox" href="../images/image-product-4.jpg">
-            <img src="../images/image-product-4-thumbnail.jpg" alt="imagen de una zapatilla" class="imagenCaja">
+          <a data-fslightbox="fourth-lightbox" href="./images/image-product-4.jpg">
+            <img src="./images/image-product-4-thumbnail.jpg" alt="imagen de una zapatilla" class="imagenCaja">
           </a>
         </div>
     </section>
@@ -84,18 +84,19 @@
       </div>
       <div class="divUltimo">
         <div class="divSubcarrito">
-          <img src="../images/icon-minus.svg" alt="icono de menos" class="menos">
+          <img src="./images/icon-minus.svg" alt="icono de menos" class="menos">
           <p class="numero">0</p>
-          <img src="../images/icon-plus.svg" alt="icono de mas" class="mas">
+          <img src="./images/icon-plus.svg" alt="icono de mas" class="mas">
         </div>
         <div class="divAnadirAlCarrito">
-          <img src="../images/icon-cart.svg" alt="imagen del carrito de compras" class="carritoDeCompras">
+          <img src="./images/icon-cart.svg" alt="imagen del carrito de compras" class="carritoDeCompras">
           <p class="agregarCarrito">Add to cart</p>
         </div>
       </div>
     </section>
   </main>
-  <script src="../js/index.js" type="module"></script>
-  <script src="../node_modules/fslightbox/index.js" ></script>
+  <script src="./node_modules/fslightbox/index.js" ></script>
+  <script src="./js/index.js" type="module"></script>
+  
 </body>
 </html>
